--- a/Views/Home/EditRecordForm.cshtml
+++ b/Views/Home/EditRecordForm.cshtml
@@ -1,76 +1,150 @@
 ﻿@model Burialmain
 
-<h1>Manage Record Below</h1>
+<center>
+    <div class="card text-white bg-dark mb-3" style="max-width: 50rem;">
+        <form method="post" asp-action="EditRecordForm">
+            <h1 class="card-header">Manage Record Below</h1>
+            <div class="card-body text-white">
+                <div class="col">
+                    <label class="form-label">ID: </label>
+                    <input id="Id" asp-for="Id" value="@Model.Id" class="form-control" />
+                </div>
+                <div class="col">
+                    <label class="form-label">Square North/South: </label>
+                    <input id="Squarenorthsouth" asp-for="Squarenorthsouth" value="@Model.Squarenorthsouth" class="form-control" />
+                </div>
+                <div class="col">
+                        <label class="form-label">Head Direction: </label>
+                        <input id="Headdirection" asp-for="Headdirection" value="@Model.Headdirection" class="form-control" />
+                </div> 
+                <div class="col">
+                    <label class="form-label">Sex: </label>
+                    <input id="Sex" asp-for="Sex" value="@Model.Sex" class="form-control" />
+                </div>
 
-<form method="post" asp-action="EditRecordForm">
-    <label>ID: </label>
-    <input id="Id" asp-for="Id" value="@Model.Id" /><br />
-    <label>Square North/South: </label>
-    <input id="Squarenorthsouth" asp-for="Squarenorthsouth" value="@Model.Squarenorthsouth" /><br />
-    <label>Head Direction: </label>
-    <input id="Headdirection" asp-for="Headdirection" value="@Model.Headdirection" /><br />
-    <label>Sex: </label>
-    <input id="Sex" asp-for="Sex" value="@Model.Sex" /><br />
-    <label>North/South: </label>
-    <input id="Northsouth" asp-for="Northsouth" value="@Model.Northsouth" /><br />
-    <label>Depth: </label>
-    <input id="Depth" asp-for="Depth" value="@Model.Depth" /><br />
-    <label>East/West: </label>
-    <input id="Eastwest" asp-for="Eastwest" value="@Model.Eastwest" /><br />
-    <label>Adult/Sub Adult: </label>
-    <input id="Adultsubadult" asp-for="Adultsubadult" value="@Model.Adultsubadult" /><br />
-    <label>Face Bundles: </label>
-    <input id="Facebundles" asp-for="Facebundles" value="@Model.Facebundles" /><br />
-    <label>South to Head: </label>
-    <input id="Southtohead" asp-for="Southtohead" value="@Model.Southtohead" /><br />
-    <label>Preservation: </label>
-    <input id="Preservation" asp-for="Preservation" value="@Model.Preservation" /><br />
-    <label>Square East/West: </label>
-    <input id="Squareeastwest" asp-for="Squareeastwest" value="@Model.Squareeastwest" /><br />
-    <label>Goods: </label>
-    <input id="Goods" asp-for="Goods" value="@Model.Goods" /><br />
-    <label>Wrapping: </label>
-    <input id="Wrapping" asp-for="Wrapping" value="@Model.Wrapping" /><br />
-    <label>Hair Color: </label>
-    <input id="Haircolor" asp-for="Haircolor" value="@Model.Haircolor" /><br />
-    <label>West to Head: </label>
-    <input id="Westtohead" asp-for="Westtohead" value="@Model.Westtohead" /><br />
-    <label>Samples Collected: </label>
-    <input id="Samplescollected" asp-for="Samplescollected" value="@Model.Samplescollected" /><br />
-    <label>Area: </label>
-    <input id="Area" asp-for="Area" value="@Model.Area" /><br />
-    <label>Burial ID: </label>
-    <input id="BurialId" asp-for="Burialid" value="@Model.Burialid" /><br />
-    <label>Length: </label>
-    <input id="Length" asp-for="Length" value="@Model.Length" /><br />
-    <label>Burial Number: </label>
-    <input id="BurialNumber" asp-for="Burialnumber" value="@Model.Burialnumber" /><br />
-    <label>Data Expert Initials: </label>
-    <input id="Dataexpertinitials" asp-for="Dataexpertinitials" value="@Model.Dataexpertinitials" /><br />
-    <label>West to Feet: </label>
-    <input id="Westtofeet" asp-for="Westtofeet" value="@Model.Westtofeet" /><br />
-    <label>Age at Death: </label>
-    <input id="Ageatdeath" asp-for="Ageatdeath" value="@Model.Ageatdeath" /><br />
-    <label>South to Feet: </label>
-    <input id="Southtofeet" asp-for="Southtofeet" value="@Model.Southtofeet" /><br />
-    <label>Excavation Recorder: </label>
-    <input id="Excavationrecorder" asp-for="Excavationrecorder" value="@Model.Excavationrecorder" /><br />
-    <label>Photos: </label>
-    <input id="Photos" asp-for="Photos" value="@Model.Photos" /><br />
-    <label>Hair: </label>
-    <input id="Hair" asp-for="Hair" value="@Model.Hair" /><br />
-    <label>Burial Materials: </label>
-    <input id="Burialmaterials" asp-for="Burialmaterials" value="@Model.Burialmaterials" /><br />
-    <label>Date of Excavation: </label>
-    <input id="Dateofexcavation" asp-for="Dateofexcavation" value="@Model.Dateofexcavation" /><br />
-    <label>Fieldbook Excavation Year: </label>
-    <input id="fieldbookexcavationyear" asp-for="Fieldbookexcavationyear" value="@Model.Fieldbookexcavationyear" /><br />
-    <label>Cluster Number: </label>
-    <input id="Clusternumber" asp-for="Clusternumber" value="@Model.Clusternumber" /><br />
-    <label>Shaft Number: </label>
-    <input id="Shaftnumber" asp-for="Shaftnumber" value="@Model.Shaftnumber" /><br />
-    <label>Text: </label>
-    <textarea id="Text" rows="4" asp-for="Text"></textarea><br /><br />
-    <input class="btn btn-primary" id="btnSend" type="submit" value="Submit Changes" />
-</form>
-
+                <div class="col">
+                    <label class="form-label">North/South: </label>
+                    <input id="Northsouth" asp-for="Northsouth" value="@Model.Northsouth" class="form-control" />
+                </div>
+                <div class="col">
+                    <label class="form-label">Depth: </label>
+                    <input id="Depth" asp-for="Depth" value="@Model.Depth" class="form-control" />
+                </div>
+                <div class="col">
+                    <label class="form-label">East/West: </label>
+                    <input id="Eastwest" asp-for="Eastwest" value="@Model.Eastwest" class="form-control" />
+                </div>
+                <div class="col">
+                    <label class="form-label">Adult/Sub Adult: </label>
+                    <input id="Adultsubadult" asp-for="Adultsubadult" value="@Model.Adultsubadult" class="form-control" />
+                </div>
+                <div class="col">
+                        <label class="form-label">Face Bundles: </label>
+                        <input id="Facebundles" asp-for="Facebundles" value="@Model.Facebundles" class="form-control" />
+                </div>
+                <div class="col">
+                        <label class="form-label">South to Head: </label>
+                        <input id="Southtohead" asp-for="Southtohead" value="@Model.Southtohead" class="form-control" />
+                </div>
+                <div class="col">
+                        <label class="form-label">Preservation: </label>
+                        <input id="Preservation" asp-for="Preservation" value="@Model.Preservation" class="form-control" />
+                </div>
+                    <div class="col">
+                        <label class="form-label">Square East/West: </label>
+                        <input id="Squareeastwest" asp-for="Squareeastwest" value="@Model.Squareeastwest" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Goods: </label>
+                        <input id="Goods" asp-for="Goods" value="@Model.Goods" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Wrapping: </label>
+                        <input id="Wrapping" asp-for="Wrapping" value="@Model.Wrapping" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Hair Color: </label>
+                        <input id="Haircolor" asp-for="Haircolor" value="@Model.Haircolor" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">West to Head: </label>
+                        <input id="Westtohead" asp-for="Westtohead" value="@Model.Westtohead" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Samples Collected: </label>
+                        <input id="Samplescollected" asp-for="Samplescollected" value="@Model.Samplescollected" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Area: </label>
+                        <input id="Area" asp-for="Area" value="@Model.Area" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Burial ID: </label>
+                        <input id="BurialId" asp-for="Burialid" value="@Model.Burialid" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Length: </label>
+                        <input id="Length" asp-for="Length" value="@Model.Length" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Burial Number: </label>
+                        <input id="BurialNumber" asp-for="Burialnumber" value="@Model.Burialnumber" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Data Expert Initials: </label>
+                        <input id="Dataexpertinitials" asp-for="Dataexpertinitials" value="@Model.Dataexpertinitials" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">West to Feet: </label>
+                        <input id="Westtofeet" asp-for="Westtofeet" value="@Model.Westtofeet" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Age at Death: </label>
+                        <input id="Ageatdeath" asp-for="Ageatdeath" value="@Model.Ageatdeath" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">South to Feet: </label>
+                        <input id="Southtofeet" asp-for="Southtofeet" value="@Model.Southtofeet" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Excavation Recorder: </label>
+                        <input id="Excavationrecorder" asp-for="Excavationrecorder" value="@Model.Excavationrecorder" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Photos: </label>
+                        <input id="Photos" asp-for="Photos" value="@Model.Photos" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Hair: </label>
+                        <input id="Hair" asp-for="Hair" value="@Model.Hair" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Burial Materials: </label>
+                        <input id="Burialmaterials" asp-for="Burialmaterials" value="@Model.Burialmaterials" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Date of Excavation: </label>
+                        <input id="Dateofexcavation" asp-for="Dateofexcavation" value="@Model.Dateofexcavation" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Fieldbook Excavation Year: </label>
+                        <input id="fieldbookexcavationyear" asp-for="Fieldbookexcavationyear" value="@Model.Fieldbookexcavationyear" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Cluster Number: </label>
+                        <input id="Clusternumber" asp-for="Clusternumber" value="@Model.Clusternumber" class="form-control" />
+                    </div>
+                    <div class="col">
+                        <label class="form-label">Shaft Number: </label>
+                        <input id="Shaftnumber" asp-for="Shaftnumber" value="@Model.Shaftnumber" class="form-control" />
+                    </div>
+                <br />
+                    <div class="col">
+                        <label class="form-label">Text: </label>
+                        <textarea id="Text" rows="4" asp-for="Text"></textarea><br /><br />
+                        <input class="btn btn-primary" id="btnSend" type="submit" value="Submit Changes" />
+                    </div>
+                </div>
+            </form>
+        </div>
+</center>
