--- a/Views/Home/Supervised.cshtml
+++ b/Views/Home/Supervised.cshtml
@@ -2,91 +2,136 @@
     var prediction = ViewBag.Prediction as Prediction;
 }
 <center>
-    <div class="container">
-        <h1>Predict Wrapping of Burial</h1>
-        <p>The more data you enter the more accurate the prediction will be.</p>
-        @if (prediction != null)
-        {
-            <h4>Your Prediction is: @prediction.PredictedValue</h4>
-        }
-        else
-        {
-            <p></p>
-        }
-        <form method="post" asp-action="Supervised" asp-controller="Home">
-            <div class="form-group">
-                <label for="HeadDirection">Is Head Direction East or West?</label>
-                <select class="form-control" name="HeadDirection_E">
-                    <option value="">---</option>
-                    <option value="0">West</option>
-                    <option value="1">East</option>
-                </select>
-                <label for="NorthSouth_N">Input NorthSouth:</label>
-                <select class="form-control" name="NorthSouth_N">
-                    <option value="">---</option>
-                    <option value="N">North</option>
-                    <option value="S">South</option>
-                </select>
-                <label for="EastWest_E">Input EastWest:</label>
-                <select class="form-control" name="EastWest_E">
-                    <option value="">---</option>
-                    <option value="1">East</option>
-                    <option value="0">West</option>
-                </select>
-                <label for="AdultSubAdult_A">Input AdultSubadult:</label>
-                <select class="form-control" name="AdultSubAdult_A">
-                    <option value="">---</option>
-                    <option value="1">Adult</option>
-                    <option value="0">Child</option>
-                </select>
-                <label for="SamplesCollected_True">Input Sample Collected?:</label>
-                <select class="form-control" name="SamplesCollected_True">
-                    <option value="0">---</option>
-                    <option value="3">Other</option>
-                    <option value="2">False</option>
-                    <option value="1">True</option>
-                </select>
-                <label for="Area_NE">Input Area:</label>
-                <select class="form-control" name="Area_NE">
-                    <option value="">---</option>
-                    <option value="4">South East</option>
-                    <option value="3">South West</option>
-                    <option value="1">North East</option>
-                    <option value="2">North West</option>
-                </select>
-                <label for="AgeAtDeath_A">Input Age at Death:</label>
-                <select class="form-control" name="AgeAtDeath_A">
-                    <option value="">---</option>
-                    <option value="1">Adult</option>
-                    <option value="2">Child</option>
-                    <option value="3">Infant</option>
-                    <option value="4">Newborn</option>
-                    <option value="5">Other</option>
-                </select>
-                <label for="Depth">Input Depth:</label>
-                <input type="number" class="form-control" name="Depth" step="0.1" />
-                <label for="SquareNorthSouth">Input Square NorthSouth:</label>
-                <input type="number" class="form-control" name="SquareNorthSouth" />
-                <label for="SquareEastWest">Input Square EastWest:</label>
-                <input type="number" class="form-control" name="SquareEastWest" />
-                <label for="SouthToHead">Input South to Head:</label>
-                <input type="number" class="form-control" name="SouthToHead" step="0.1" />
-                <label for="WestToHead">Input West to Head:</label>
-                <input type="number" class="form-control" name="WestToHead" step="0.1" />
-                <label for="SouthToFeet">Input South to Feet:</label>
-                <input type="number" class="form-control" name="SouthToFeet" step="0.1" />
-                <label for="WesttToFeet">Input West to Feet:</label>
-                <input type="number" class="form-control" name="WestToFeet" step="0.1" />
-                <label for="FieldbookPage">Input Field Book Page:</label>
-                <input type="number" class="form-control" name="FieldbookPage" />
-                <label for="Length">Input Length:</label>
-                <input type="number" class="form-control" name="Length" step="0.1" />
-                <label for="BurialNumber">Input Burial Number:</label>
-                <input type="number" class="form-control" name="BurialNumber" />
-                <label for="FieldbookExcavationYear">Input Field Book Excavation Year:</label>
-                <input type="number" class="form-control" name="FieldbookExcavationYear" />
+    <div class="card text-white bg-info mb-3" style="max-width: 50rem;">
+        <form class="row g-3" method="post" asp-action="Supervised">
+            <h1 class="card-header">Predict Wrapping of Burial</h1>
+            <div class="card-body">
+                <p>The more data you enter the more accurate the prediction will be.</p>
+                @if (prediction != null)
+                {
+                    <h4 class="card-title">Your Prediction is: @prediction.PredictedValue</h4>
+                }
+                else
+                {
+                    <p></p>
+                }
+                <div class="col-md-4">
+                    <label for="SquareNorthSouth" class="form-label">Square North/South Value:</label>
+                    <input type="number" class="form-control" id="SquareNorthSouth" name="SquareNorthSouth">
+                </div>
+                <div class="col-md-4">
+                    <label for="SquareEastwest" class="form-label">Square East/West Value:</label>
+                    <input type="number" class="form-control" id="SquareEastwest" name="SquareEastwest">
+                </div>
+                <div class="col-md-4">
+                    <label for="Depth" class="form-label">Depth Value:</label>
+                    <input type="number" class="form-control" id="Depth" name="Depth">
+                </div>
+                <div class="col-md-4">
+                    <label for="FieldbookExcavationYear" class="form-label">What was the Fieldbook Excavation Year?</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="inputGroupPrepend2"></span>
+                        <input type="number" class="form-control" id="FieldbookExcavationYear" name="FieldbookExcavationYear" aria-describedby="inputGroupPrepend2">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <label for="FieldbookPage" class="form-label">What was the Fieldbook Page?</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="inputGroupPrepend2"></span>
+                        <input type="number" class="form-control" id="FieldbookPage" name="FieldbookPage" aria-describedby="inputGroupPrepend2">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="Length" class="form-label">Length</label>
+                    <input type="number" class="form-control" id="Length" name="Length">
+                </div>
+                <div class="col-md-3">
+                    <label for="HeadDirection_E" class="form-label">Head Direction</label>
+                    <select class="form-select" id="HeadDirection_E" name="HeadDirection_E">
+                        <option value="">...</option>
+                        <option value="1">East</option>
+                        <option value="2">West</option>
+                    </select>
+                </div>
+                <div class="col-md-6">
+                    <label for="WestToFeet" class="form-label">West To Feet Value?</label>
+                    <input type="number" class="form-control" id="WestToFeet" name="WestToFeet">
+                </div>
+                <div class="col-md-6">
+                    <label for="SouthToFeet" class="form-label">South To Feet Value?</label>
+                    <input type="number" class="form-control" id="SouthToFeet" name="SouthToFeet">
+                </div>
+                <div class="col-md-3">
+                    <label for="NorthSouth_N" class="form-label">North or South?</label>
+                    <select class="form-select" id="NorthSouth_N" name="NorthSouth_N">
+                        <option value="">...</option>
+                        <option value="1">North</option>
+                        <option value="2">South</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="EastWest_E" class="form-label">East or West?</label>
+                    <select class="form-select" id="EastWest_E" name="EastWest_E">
+                        <option value="">...</option>
+                        <option value="1">East</option>
+                        <option value="2">West</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="AdultSubAdult_A" class="form-label">Adult or Subadult?</label>
+                    <select class="form-select" id="AdultSubAdult_A" name="AdultSubAdult_A">
+                        <option value="">...</option>
+                        <option value="1">Adult</option>
+                        <option value="0">Subadult</option>
+                    </select>
+                </div>
+                <div class="col-md-6">
+                    <label for="BurialNumber" class="form-label">What was the Burial Number?</label>
+                    <input type="number" class="form-control" id="BurialNumber" name="BurialNumber">
+                </div>
+                <div class="col-md-3">
+                    <label for="SamplesCollected_True" class="form-label">Were samples collected?</label>
+                    <select class="form-select" id="SamplesCollected_True" name="SamplesCollected_True">
+                        <option value="">...</option>
+                        <option value="1">Yes</option>
+                        <option value="2">No</option>
+                        <option value="3">Other</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="Area_NE" class="form-label">What is the area direction?</label>
+                    <select class="form-select" id="Area_NE" name="Area_NE">
+                        <option value="">...</option>
+                        <option value="1">Northeast</option>
+                        <option value="2">Northwest</option>
+                        <option value="3">Southeast </option>
+                        <option value="4">Southwest</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="AgeAtDeath_A" class="form-label">What was the age at death?</label>
+                    <select class="form-select" id="AgeAtDeath_A" name="AgeAtDeath_A">
+                        <option value="">...</option>
+                        <option value="1">Adult</option>
+                        <option value="2">Child</option>
+                        <option value="3">Infant </option>
+                        <option value="4">Newborn</option>
+                        <option value="5">Other</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="SouthToHead" class="form-label">South To Head Value?</label>
+                    <input type="number" class="form-control" id="SouthToHead" name="SouthToHead">
+                </div>
+                <div class="col-md-3">
+                    <label for="WestToHead" class="form-label">West To Head Value?</label>
+                    <input type="number" class="form-control" id="WestToHead" name="WestToHead">
+                </div>
+                <br />
+                <div class="col-12">
+                    <button class="btn btn-light" type="submit">Submit form</button>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Make Prediction</button>
         </form>
     </div>
 </center>
