--- a/Views/Home/Unsupervised.cshtml
+++ b/Views/Home/Unsupervised.cshtml
@@ -9,7 +9,7 @@
     <p>
         The 3D model shows the dig site by sectors north/south, east/west, and by depth reflected appropriatley in the graph.
         As you can see there are a lot more fully wrapped remains on the North end of the site. This may imply that the location
-        of the burial had some significance to the egyptions causing the people buried in that spot to have more wrappings
+        of the burial had some significance to the Egyptians causing the people buried in that spot to have more wrappings
         than other burial locations of the site.
     </p>
     <script>
@@ -70,7 +70,7 @@
         This graph ,similarly to the other 3D model, shows the location and the preservation of the mummy. This graph shows the poorly
         preserved mummies as the yellow dots and the others as the purple dots. This graph shows a strong correlation between poorly
         preserved mummies and square east west. All of the poorly preserved mummies in this sample are buried on the East side. This 
-        could imply that the egyptions used a different preservation technique for the burials in that location or that something in
+        could imply that the Egyptians used a different preservation technique for the burials in that location or that something in
         the soil of that area could have affected the way that the mummies were preserved.
     </p>
     <img id="image_preservation" src="https://localhost:44339/assets/img/Preservation_1.png" />
