--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
                         <p class="display-2" style="font-size:80px;">Welcome to Fag El-Gamous.</p>
                         <br /><br />
                     </div>
+                    <a href="C:\Users\bnant\source\repos\INTEXll\Views\Home\Supervised.cshtml"></a>
                     <div class="card-group">
                         <div class="card text-bg-dark">
                             <img src="~/lib/gamous.jpg" class="card-img-top" alt="...">
