--- a/Views/Home/Supervised.cshtml
+++ b/Views/Home/Supervised.cshtml
@@ -9,7 +9,7 @@
                 <p>The more data you enter the more accurate the prediction will be.</p>
                 @if (prediction != null)
                 {
-                    <h4 class="card-title">Your Prediction is: @prediction.PredictedValue</h4>
+                    <h3 class="card-title" style="font-weight:bold;">Your Prediction is: @prediction.PredictedValue</h3>
                 }
                 else
                 {
