New Fabulous Favicon

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,7 +14,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/assets/img/Favicon/favicon.ico" rel="icon">
+    <!-- Favicon by Icons8.com -->
+    <link href="~/assets/img/Favicon/icons8-pyramid-tanah-basah-glyph-96.png" rel="icon">
     <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
