--- a/Views/Home/Unsupervised.cshtml
+++ b/Views/Home/Unsupervised.cshtml
@@ -23,18 +23,18 @@
         var image2 = new Image();
         var image3 = new Image();
         var image4 = new Image();
-        image1.src = "http://wayofthewaterbuffalo.org/assets/img/wrapping_1.png";
-        image2.src = "http://wayofthewaterbuffalo.org/assets/img/wrapping_2.png";
-        image3.src = "http://wayofthewaterbuffalo.org/assets/img/Preservation_1.png";
-        image4.src = "http://wayofthewaterbuffalo.org/assets/img/Preservation_2.png";
+        image1.src = "https://wayofthewaterbuffalo.org/assets/img/wrapping_1.png";
+        image2.src = "https://wayofthewaterbuffalo.org/assets/img/wrapping_2.png";
+        image3.src = "https://wayofthewaterbuffalo.org/assets/img/Preservation_1.png";
+        image4.src = "https://wayofthewaterbuffalo.org/assets/img/Preservation_2.png";
 
         function changeImage() {
             var img = document.getElementById('image_wrapping');
             if (currentImage == 1) {
-                img.src = "http://wayofthewaterbuffalo.org/assets/img/wrapping_1.png";
+                img.src = "https://wayofthewaterbuffalo.org/assets/img/wrapping_1.png";
                 currentImage = 2;
             } else {
-                img.src = "http://wayofthewaterbuffalo.org/assets/img/wrapping_2.png";
+                img.src = "https://wayofthewaterbuffalo.org/assets/img/wrapping_2.png";
                 currentImage = 1;
             }
         }
@@ -42,10 +42,10 @@
         function changeImage2() {
             var img = document.getElementById('image_preservation');
             if (currentImage2 == 1) {
-                img.src = "http://wayofthewaterbuffalo.org/assets/img/Preservation_1.png";
+                img.src = "https://wayofthewaterbuffalo.org/assets/img/Preservation_1.png";
                 currentImage2 = 2;
             } else {
-                img.src = "http://wayofthewaterbuffalo.org/assets/img/Preservation_2.png";
+                img.src = "https://wayofthewaterbuffalo.org/assets/img/Preservation_2.png";
                 currentImage2 = 1;
             }
         }
@@ -53,7 +53,7 @@
         setInterval(changeImage, 1000);
         setInterval(changeImage2, 1000);
     </script>
-    <img id="image_wrapping" src="http://wayofthewaterbuffalo.org/assets/img/wrapping_1.png" />
+    <img id="image_wrapping" src="https://wayofthewaterbuffalo.org/assets/img/wrapping_1.png" />
     <br /> <br /> <br /> <br />
     <div style="background-color: darkgray; height: 1px; width: 90%; margin: 0 auto;"></div>
     <br /> <br /> <br />
@@ -85,5 +85,5 @@
             </p>
         </div>
     </div>
-    <img id="image_preservation" src="http://wayofthewaterbuffalo.org/assets/img/Preservation_1.png" />
+    <img id="image_preservation" src="https://wayofthewaterbuffalo.org/assets/img/Preservation_1.png" />
 </div>
