--- a/Views/Home/Burials.cshtml
+++ b/Views/Home/Burials.cshtml
@@ -240,7 +240,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div page-model="" page-blah="@Model.PageInfo" page-action="Burials" page-class="btn" page-class-normal="btn-outline-light" page-class-selected="btn-primary" page-class-enabled="true" class="btn-group pull-right m-1"></div>
+                        <div class="text-center">
+                            <div page-model="" page-blah="@Model.PageInfo" page-action="Burials" page-class="btn" page-class-normal="btn-outline-light" page-class-selected="btn-primary" page-class-enabled="true" class="btn-group pull-right m-1"></div>
+                        </div>
                     </div>
                 </div>
             </div>
