--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                             <img src="~/lib/mummies.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Excavation</h5>
-                                <p class="card-text">Over the course of several years, extensive research has been conducted, involving the excavation of over 1,000 mummies. Data has been meticulously collected in field notes, spreadsheets, and basic databases detailing the location of each mummy, their physical orientation within the burial site, depth of interment, hair color, textile wrapping, gender, age, bone dimensions, and much more!. To learn more, visit <a href="https://rsc.byu.edu/fall-2012/sands-egypt-results-byu-egypt-excavation-project" target="blank">https://rsc.byu.edu/fall-2012/sands-egypt-results-byu-egypt-excavation-project</a></p>
+                                <p class="card-text">Over the course of several years, extensive research has been conducted, involving the excavation of over 1,000 mummies. Data has been meticulously collected in field notes, spreadsheets, and basic databases detailing the location of each mummy, their physical orientation within the burial site, depth of interment, hair color, textile wrapping, gender, age, bone dimensions, and much more!. To learn more, look at <br /><div class="text-center"><a asp-action="Burials" class="btn btn-outline-light mb-3 text-center">Burial Records</a></div></p>
                             </div>
                         </div>
                         <div class="card text-bg-dark">
